actualizacion de formacion e insercion de planilla de jugadores

--- a/index.html
+++ b/index.html
@@ -27,62 +27,10 @@
             </div>
             <div id="mapaCampo" class="lienzo">
                 <div class="contLienzoJugadores">
-                    <div id="arquero" class="colJug">
-                        <!-- <div class="globoJugador jugadorArq">
-                            <button class="jugador" id="">0</button>
-                            <p class="nombreJugador">nombre</p>
-                        </div> -->
-                    </div>
-                    <div id="defensores" class="colJug">
-                        <!-- <div class="globoJugador jugadorDef">
-                            <button class="jugador" id="valorDefensor1">0</button>
-                            <p class="nombreJugador">nombre</p>
-                        </div>
-                        <div class="globoJugador jugadorDef">
-                            <button class="jugador" id="valorDefensor2">0</button>
-                            <p class="nombreJugador">nombre2</p>
-                        </div>
-                        <div class="globoJugador jugadorDef">
-                            <button class="jugador" id="valorDefensor3">0</button>
-                            <p class="nombreJugador">nombre3</p>
-                        </div>
-                        <div class="globoJugador jugadorDef">
-                            <button class="jugador" id="valorDefensor4">0</button>
-                            <p class="nombreJugador">nombre4</p>
-                        </div> -->
-                    </div>
-                    <div id="mediocampistas" class="colJug">
-                        <!-- <div class="globoJugador jugadorMedio">
-                            <button class="jugador">0</button>
-                            <p class="nombreJugador">nombre</p>
-                        </div>
-                        <div class="globoJugador jugadorMedio">
-                            <button class="jugador">0</button>
-                            <p class="nombreJugador">nombre</p>
-                        </div>
-                        <div class="globoJugador jugadorMedio">
-                            <button class="jugador">0</button>
-                            <p class="nombreJugador">nombre</p>
-                        </div>
-                        <div class="globoJugador jugadorMedio">
-                            <button class="jugador">0</button>
-                            <p class="nombreJugador">nombre</p>
-                        </div> -->
-                    </div>
-                    <div id="delanteros" class="colJug">
-                        <!-- <div class="globoJugador jugadorDel">
-                            <button class="jugador">0</button>
-                            <p class="nombreJugador">nombre</p>
-                        </div>
-                        <div class="globoJugador jugadorDel">
-                            <button class="jugador">0</button>
-                            <p class="nombreJugador">nombre</p>
-                        </div>
-                        <div class="globoJugador jugadorDel">
-                            <button class="jugador">0</button>
-                            <p class="nombreJugador">nombre</p>
-                        </div> -->
-                    </div>
+                    <div id="arquero" class="colJug"></div>
+                    <div id="defensores" class="colJug"></div>
+                    <div id="mediocampistas" class="colJug"></div>
+                    <div id="delanteros" class="colJug"></div>
                 </div>
             </div>
             <article>
@@ -103,7 +51,7 @@
                     <ul class="valor" id="valorPlanilla">
                         <li>ValorGral</li>
                     </ul>
-                    <ul id="botonAgregar-Planilla">
+                    <ul id="botonAgregarPlanilla">
                         <button>Agregar</button>
                     </ul>
                 </div>
